--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="recent_history">Recent History</string>
-    <string name="daily_problem">Daily Problem</string>
+    <string name="random_problem">Random Problem</string>
     <string name="login">Sign in</string>
     <string name="logout">Log out</string>
     <string name="history">History</string>
